RESOLVED FIXED 51942
[Chromium] Crash when drawing PDF plug-in scrollbars
https://bugs.webkit.org/show_bug.cgi?id=51942
Summary [Chromium] Crash when drawing PDF plug-in scrollbars
Mihai Parparita
Reported 2011-01-05 11:57:50 PST
[Chromium] Crash when drawing PDF plug-in scrollbars
Attachments
Patch (2.18 KB, patch)
2011-01-05 11:59 PST, Mihai Parparita
japhet: review+
Mihai Parparita
Comment 1 2011-01-05 11:59:13 PST
Mihai Parparita
Comment 2 2011-01-05 12:03:11 PST
Note You need to log in before you can comment on or make changes to this bug.